--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "next-images": "^1.8.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "swr": "^1.3.0",
+    "tailwind-styled-components": "^2.1.8"
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
